<resources>
    <string name="app_name">Movie Zone</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="settings_sort_by_label">Sort By</string>
    <string name="title_favorites">Favorites</string>
    <string name="settings_sort_by_key" translatable="false">sort_by</string>
    <string name="settings_sort_by_default" translatable="false">@string/setting_sort_by_popular_value</string>

    <string name="setting_sort_by_popular_label">Popular</string>
    <string name="setting_sort_by_popular_value" translatable="false">popular</string>

    <string name="setting_sort_by_top_rated_label">Top Rated</string>
    <string name="setting_sort_by_top_rated_value" translatable="false">top_rated</string>
  <string name="setting_favorite_label">Favorites</string>
    <string name="setting_favorite_value" translatable="false">favorites</string>
    <string name="settings_menu_item">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="info">INFO</string>
    <string name="no_internet_connection"> No Internet Connection</string>
    <string name="no_data">No Movies found</string>
    <string name="Detail_Activity">Details</string>
    <string name="title">TITLE :</string>
    <string name="release">RELEASE DATE : </string>
    <string name="IMDB">IMDB Rating : </string>
    <string name="plot">PLOT: </string>
    <string name="Not_yet_implemented">Not yet implemented</string>
    <string name="UnKnown_URI">UnKnown URI</string>
    <string name="Failed_to_insert">Failed to insert row into </string>
    <string name="sending_data">Movie_data</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="favorite_activity">Favorite_intent</string>
    <string name="favorite_intent">Value</string>
    <string name="favorite_title">Favorite:</string>
    <string name="trailer">Trailer</string>
    <string name="movie_id">movie_id</string>
    <string name="Added_to_Favorite">Successfully added to Favorites</string>
    <string name="Already_Added">Already added to favorites</string>
    <string name="Removed_From_Favorite">Removed from Favorite List</string>
<string name="PATH_REVIWS">reviews</string>
    <string name="PATH_VIDEOS">videos</string>
    <string name="REFRESHING_MOVIES">Movies Refreshed</string>
    <!-- Example General settings -->

</resources>
