<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:adjustViewBounds="true"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<LinearLayout
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.moviezone.DetailActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageview"
        android:scaleType="fitCenter"
     />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/background_dark"
        android:paddingTop="10dp"></View>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/info"
    android:fontFamily="sans-serif"
    android:textColor="@android:color/black"
    android:gravity="center_horizontal"
    android:textSize="20sp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif"
    android:textColor="@android:color/black"

    android:textSize="20sp"
    android:text="@string/title"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/title_view"
        android:gravity="center"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"

            android:textSize="20sp"
            android:text="@string/favorite_title"
            />
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/myToggleButton"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:textOn=""
            android:textOff=""/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/release"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/date_view"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/IMDB"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/rating_view"
            android:gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/plot"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:id="@+id/plot_view"
            android:singleLine="false"
            android:gravity="center"
            />
    </LinearLayout>




    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="50dp"-->

        <!--&gt;</View>-->



    <android.support.v7.widget.CardView
        android:id="@+id/card_view_trailer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/trailer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/trailer"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trailer"
                android:layout_marginLeft="16dp"
                android:clipToPadding="false"
                android:scrollbars="horizontal" />
            <ProgressBar
                android:id="@+id/loading_indicator1"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp"
        card_view:cardCornerRadius="@dimen/card_movie_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="Reviews"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:clipToPadding="false"
                    android:scrollbars="vertical" />
            </ScrollView>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>

</ScrollView>


